Fix more accessiblity and layout issues

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -380,7 +380,7 @@ body {
         border: 2px solid gold;
     }
 
-    #delivery-banner h4 {
+    #delivery-banner h3 {
         font-size: .9rem;
     }
 
